# ai-project

./: .gitignore  Makefile  README.md  discord_bot.py  kurobara_ai.py  openai_setup.py  pyproject.toml  train_data_generator.py  validate_format.py
ai/: ai_client.py  ai_client_provider.py  ikeda_ai.py  kurobara_ai.py  meu_ai.py  shapa_ai.py
discord/: .gitignore  bot.py  pyproject.toml
twitter/: .gitignore  README.md  extractor.py  select_tweets.py
