[tool.poetry]
name = "discord_bot"
version = "0.1.0"
description = ""
authors = ["1119-2916 <ti11192916@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.3.2"
black = "^23.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
